# wf-info

./: LICENSE  README.md  meson.build
ipc-scripts/: wf-info.py
metadata/: meson.build  wf-info.xml
proto/: meson.build  wayfire-information.xml
src/: main.cpp  meson.build
src/client/: wf-info.cpp  wf-info.hpp
src/client/qt/: gui.py  wf_info_base.py
src/plugin/: ipc-rules-common.hpp  wayfire-information.cpp  wayfire-information.hpp
src/wayfire-information/: wayfire-information.cpp
src/wf-info/: meson.build  wf-info.cpp  wf-info.hpp
